# NSG_PQ

./: CMakeLists.txt  README.md  result64.txt
include/efanna2e/: exceptions.h  index.h  index_nsg.h  neighbor.h  util.h
src/: index_nsg.cpp
tests/: CMakeLists.txt  distance_test.cpp  test_distance_calculation.cpp  test_hybrid_product.cpp  test_nsg_optimized_search.cpp  test_nsg_search.cpp  test_product_quantization_search.cpp
